--- a/bugtrackingsystem/src/main/resources/application.properties
+++ b/bugtrackingsystem/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=bugtrackingsystem
 #PostgreSql database configuraton
 spring.datasource.url=jdbc:postgresql://localhost:5432/bugtrackingsystem
-spring.datasource.username=postgres
-spring.datasource.password=pgadmin
+spring.datasource.username="Your User Name"
+spring.datasource.password="Your Password"
 #JPA settings
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
@@ -10,4 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
 # Validation
 spring.mvc.throw-exception-if-no-handler-found=true
+
 spring.web.resources.add-mappings=false
